Add conflict command by role